fix sidebar in out and fix navbar layout shifting

--- a/client/src/Components/Navbar.scss
+++ b/client/src/Components/Navbar.scss
@@ -38,7 +38,7 @@
       outline: none !important;
       // color: white;
       outline: none;
-      transition: all 0.3s ease-in-out;
+      // transition: all 0.3s ease-in-out;
       
     }
     button{
@@ -53,7 +53,7 @@
     color: $lightwhite;
     text-decoration: none;
     padding: 0rem 0.5rem;
-    transition: color 0.3s ease-in-out;
+    // transition: color 0.3s ease-in-out;
   }
   .navlink:hover {
     color: rgb(209, 172, 50);
@@ -72,7 +72,7 @@
     height: 2px;
     background-color: rgb(199, 159, 49);
     transform: scaleX(0);
-    transition: transform 0.3s ease-in-out;
+    // transition: transform 0.3s ease-in-out;
   }
 
   .navlink:hover::after {
@@ -130,18 +130,22 @@
 
 
   .offcanvas {
+    transition: all 0.3s ease-in-out !important; // handle sidebar  in out 
     .offcanvas-header {
+      
       background-color: rgba(173, 216, 230, 0.3);
       padding: 10px 20px;
     }
     .offcanvas-body {
+      
       .bodyWrapper {
+        
         .offcanvasNavlinkWrapper {
           
           border: 1px solid rgba(128, 128, 128, 0.5) !important;
           // border: none;
           border-radius: 5px;
-          transition: all 0.2s ease-in-out !important;
+          
 
           &:hover {
             transform: translateY(-2px);
@@ -267,7 +271,7 @@ ul {
   .main-nav,
   button {
     background-color: transparent;
-    transition: all 0.3s ease-in-out;
+    // transition: all 0.3s ease-in-out;
     border: none;
     // transform: translateX(-300px);
 
@@ -334,7 +338,7 @@ ul {
   //   .notification{
   //     position: absolute;
   //     top: -8px;
-  //     right: -8px;
+  //     right: -8px; 
   //     background-color: red;
   //     color: white;
   //     border-radius: 50%;
@@ -348,3 +352,8 @@ ul {
   // }
 }
 
+
+.ms{
+  margin-left: 50px;
+  // margin-right: 20px;
+}
